Change History
**************

1.6.0 (unreleased)
==================

- The buildout init command now accepts distribution requirements and
  paths to set up a custom interpreter part that has the distributions
  or parts in the path. For example::

     python bootstrap.py init BeautifulSoup

- Introduce a cache for the expensive `buildout._dir_hash` function.

- Remove duplicate path from script's sys.path setup.

- changed broken dash S check to pass the configuration options
  -S -c separately, to make zc.buildout more compatible with the PyPy
  interpreter, which has less flexible argument parsing than CPython.

  Note that PyPy post 1.4.0 is needed to make buildout work at all,
  due to missing support for the ``-E`` option, which only got added
  afterwards.

- Made sure to download extended configuration files only once per buildout
  run even if they are referenced multiple times (patch by Rafael Monnerat).

Bugs fixed:

- In the download module, fixed the handling of directories that are pointed
  to by file-system paths and ``file:`` URLs.

- Removed any traces of the implementation of ``extended-by``. Raise a
  UserError if the option is encountered instead of ignoring it, though.

- https://bugs.launchpad.net/bugs/697913 : Buildout doesn't honor exit code
  from scripts. Fixed.

1.5.2 (2010-10-11)
==================

- changed metadata 'url' to pypi.python.org in order to solve
  a temporary outage of buildout.org

- IMPORTANT: For better backwards compatibility with the pre-1.5 line,
  this release has two big changes from 1.5.0 and 1.5.1.

  - Buildout defaults to including site packages.

  - Buildout loads recipes and extensions with the same constraints to
    site-packages that it builds eggs, instead of never allowing access
    to site-packages.

  This means that the default configuration should better support
  pre-existing use of system Python in recipes or builds.

- To make it easier to detect the fact that buildout has set the PYTHONPATH,